--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "node": "0.6 || 0.7 || 0.8"
   },
   "dependencies": {
-    "tako": "0.2.0",
-    "coffee-script": "1.2.0",
-    "coffeecup": "0.3.5-3",
-    "js2coffee": "0.1.3"
+    "tako": "~0.2.0",
+    "coffee-script": "~1.3.1",
+    "coffeecup": "~0.3.6",
+    "js2coffee": "~0.1.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "~1.0.0",
+    "should": "*",
+    "request": "*"
+  },
   "optionalDependencies": {},
   "subdomain": "js2cs"
 }
