--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Tom Wilson <tom@jackhq.com>",
   "name": "js2cs",
   "description": "Web App to convert javascript to coffeescript",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "repository": {
     "url": ""
   },
@@ -15,13 +15,14 @@
     "node": "0.6 || 0.7 || 0.8"
   },
   "dependencies": {
-    "tako": "~0.2.0",
-    "coffee-script": "~1.3.1",
-    "coffeecup": "~0.3.6",
-    "js2coffee": "~0.1.3"
+    "js2coffee": "*",
+    "socket.io": "*",
+    "filed": "0.0.6"
   },
   "devDependencies": {
-    "mocha": "~1.0.0",
+    "coffee-script": "*",
+    "coffeecup": "*",
+    "mocha": "*",
     "should": "*",
     "request": "*"
   },
