--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Tom Wilson <tom@jackhq.com>",
   "name": "js2cs",
   "description": "Web App to convert javascript to coffeescript",
-  "version": "0.2.2-2",
+  "version": "0.2.2-7",
   "repository": {
     "url": ""
   },
@@ -12,11 +12,11 @@
     "start": "server.js"
   },
   "engines": {
-    "node": "0.6 || 0.7 || 0.8"
+    "node": "0.6"
   },
   "dependencies": {
-    "js2coffee": "*",
-    "socket.io": "*",
+    "js2coffee": "0.1.3",
+    "socket.io": "0.8.x",
     "filed": "0.0.6"
   },
   "devDependencies": {
